Fix heading overlap

--- a/app/webpacker/styles/category.scss
+++ b/app/webpacker/styles/category.scss
@@ -152,7 +152,6 @@
       h2,
       h3 {
         @extend .heading-m, .heading--margin-0;
-        line-height: 2rem;
       }
     }
   }
